<resources>
    <string name="app_name">Go 4 Launch</string>
    <string name="find_a_nice_restaurant_and_invite_your_co_workers_for_lunch">Find a nice restaurant and invite your co-workers for lunch !</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_mail_and_password">Sign in with mail and password</string>
    <string name="connect">Connect</string>
    <string name="password">Password</string>
    <string name="mail">Mail</string>
    <string name="error_occurred">An error has occurred</string>
    <string name="error_credentials_empty">Credentials could not be empty</string>
    <string name="error_mail_empty">Email address could not be empty</string>
    <string name="please_chose_a_username">Please, chose a username</string>
    <string name="error_password_empty">Password could not be empty</string>
    <string name="username">Username</string>
    <string name="call_me_like_this">Call me like this</string>
    <string name="error_username_empty">Username could not be empty</string>
    <string name="welcome">Welcome</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="workmates">Workmates</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="your_lunch">Your lunch</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="get_notified">Get notified !</string>
    <string name="allows_go4lunch_to_keep_you_informed">Allows Go4Lunch to keep you informed</string>
    <string name="allow">Allow</string>
    <string name="later">Later</string>
    <string name="preferences_saved">Preferences saved !</string>
    <string name="display_name">Display name :</string>
    <string name="email_address">Email address :</string>
    <string name="enable_disable_notifications">Enable/Disable notifications</string>
    <string name="change_password">Change password</string>
    <string name="edit_username">Edit username</string>
    <string name="save">Save</string>
    <string name="edit_mail_address">Edit mail address</string>
    <string name="edit_password">Edit password</string>
    <string name="opened">Open</string>
    <string name="closed">Close\n</string>
    <plurals name="nearby_restaurants_count">
        <item quantity="one">Restaurant nearby : %d</item>
        <item quantity="other">Restaurants nearby : %d</item>
    </plurals>
    <string name="not_decided">hasn\'t decided yet</string>
    <string name="is_eating">is eating (%1$s)</string>
    <string name="title_activity_chat_details" translatable="false">ChatDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    
    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="aa" translatable="false">Aa</string>
    <string name="you">You</string>
    <string name="success_worker">Notifications set with success !</string>
    <string name="dismiss">Dismiss</string>
    <string name="website">Website</string>
    <string name="like">Like</string>
    <string name="call">Call</string>
    <string name="saved_restaurant">Restaurant saved</string>
    <string name="you_eat_at">You eat at</string>
    <string name="no_restaurant_selected">No lunch planned</string>
    <string name="alone">alone</string>
    <string name="with">with\n</string>
    <string name="zero" translatable="false">0</string>
    <string name="sign_in_with_github">Sign in with Github</string>
    <string name="connect_with_mail_password">Connect with mail/password</string>
</resources>