<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".login.LoginActivity"
    >
    
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.44"
        android:background="@color/black"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        />
    
    <ImageView
        android:id="@+id/activity_login_ImageView_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/lunchbox"
        android:transitionName="activity_login_ImageView_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    
    <TextView
        android:id="@+id/activity_login_TextView_app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="52sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_login_ImageView_logo"
        />
    
    
    <TextView
        android:id="@+id/activity_login_TextView_brand_sentence"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/advent_pro"
        android:text="@string/find_a_nice_restaurant_and_invite_your_co_workers_for_lunch"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_login_TextView_app_name"
        />
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_login_ConstraintLayout_button_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_login_TextView_brand_sentence"
        >
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_login_MaterialButton_mail_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/purple_background"
            android:fontFamily="@font/advent_pro_bold"
            android:text="@string/sign_in_with_mail_and_password"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:cornerRadius="8dp"
            app:icon="@drawable/password_icon"
            app:iconGravity="start"
            app:layout_constraintBottom_toTopOf="@id/activity_login_MaterialButton_facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/dark_purple"
            />
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_login_MaterialButton_facebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/facebook_background"
            android:fontFamily="@font/advent_pro_bold"
            android:text="@string/sign_in_with_facebook"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:icon="@drawable/facebook_icon"
            app:iconGravity="start"
            app:layout_constraintBottom_toTopOf="@id/activity_login_MaterialButton_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_login_MaterialButton_mail_password"
            app:rippleColor="@color/facebook_color"
            />
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_login_MaterialButton_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/google_background"
            android:fontFamily="@font/advent_pro_bold"
            android:text="@string/sign_in_with_google"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:cornerRadius="8dp"
            app:icon="@drawable/google_icon"
            app:iconGravity="start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_login_MaterialButton_facebook"
            app:rippleColor="@color/google_color"
            />
    
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>