<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".notification_preferences.NotificationsPreferencesActivity"
    >
    
    
    <ImageView
        android:id="@+id/activity_notifications_preferences_ImageView_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:src="@drawable/lunchbox"
        android:transitionName="activity_login_ImageView_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    
    <TextView
        android:id="@+id/activity_notifications_preferences_TextView_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/get_notified"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_notifications_preferences_ImageView_logo"
        />
    
    <TextView
        android:id="@+id/activity_notifications_preferences_TextView_under_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/advent_pro"
        android:text="@string/allows_go4lunch_to_keep_you_informed"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_notifications_preferences_TextView_title"
        />
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_notifications_preferences_ConstraintLayout_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_notifications_preferences_TextView_under_title"
        app:layout_constraintVertical_bias="0.16000003"
        >
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_notifications_preferences_MaterialButton_negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/rusty_red"
            android:fontFamily="@font/advent_pro_bold"
            android:text="@string/later"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/activity_notifications_preferences_MaterialButton_positive"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_notifications_preferences_MaterialButton_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/shamrock_green"
            android:fontFamily="@font/advent_pro_bold"
            android:text="@string/allow"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/activity_notifications_preferences_MaterialButton_negative"
            app:layout_constraintTop_toTopOf="parent"
            />
    
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>